Update stylesheet and script paths in news.html

--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
   <title>Janasabha News</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/news.css">
+  <link rel="stylesheet" href="news.css">
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -91,7 +91,7 @@
   </div>
 
   <!-- JS -->
-  <script src="js/firebase.js"></script>
-  <script src="js/news.js"></script>
+  <script src="firebase.js"></script>
+  <script src="news.js"></script>
 </body>
 </html>
