Update magazine link for Mannanam (Kottayam)

--- a/news.html
+++ b/news.html
@@ -826,7 +826,7 @@
     // Magazine links (edit)
     const MAGAZINE_LINKS = {
       "ALL": "magazine.html",
-      "Mannanam (Kottayam)": "magazine-mannanam.html"
+      "Mannanam (Kottayam)": "magazine.html"
     };
 
     // State
