Update print statement from 'Hello' to 'Goodbye'

--- a/magazine.html
+++ b/magazine.html
@@ -14,7 +14,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     :root{
-      --max-width: 1200px;
+      --max-width: 100%;
       --side-padding: 16px;
       --nav-h: 70px;
 
@@ -1037,3 +1037,4 @@
   </script>
 </body>
 </html>
+
