--- a/magazine.html
+++ b/magazine.html
@@ -14,7 +14,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     :root{
-      --max-width: 100%;
+      --max-width: 1300px;
       --side-padding: 16px;
       --nav-h: 70px;
 
@@ -1037,4 +1037,5 @@
   </script>
 </body>
 </html>
+
 
