--- a/magazine.html
+++ b/magazine.html
@@ -468,10 +468,21 @@
         id: "2025-08",
         dateLabel: "August 2025",
         note: "First digital edition.",
-        cover: "editions/2025-08/cover.jpg",          // optional (if no cover.jpg, it will try pdf first page)
+        cover: "editions/2025-08/cover1.jpg",          // optional (if no cover.jpg, it will try pdf first page)
         type: "pdf",
-        pdf: "editions/2025-08/magazine.pdf"          // upload this file
+        pdf: "editions/2025-08/magazine1.pdf"          // upload this file
       },
+
+
+      {
+  id: "2025-09",
+  dateLabel: "September 2025",
+  note: "Second digital edition.",
+  cover: "editions/2025-09/cover.jpg",
+  type: "pdf",
+  pdf: "editions/2025-09/magazine.pdf"
+}
+
 
       // Example (images edition)
       // {
@@ -923,3 +934,4 @@
   </script>
 </body>
 </html>
+
