--- a/magazine.html
+++ b/magazine.html
@@ -547,7 +547,7 @@
         cover: "editions/2025-12/cover2.jpg",
         type: "pdf",
         pdf: "editions/2025-12/magazine2.pdf",
-        flipbookUrl: "https://mannanamvoice-janasabha.blogspot.com/2025/12/2025-1-2.html"
+        flipbookUrl: "https://online.fliphtml5.com/mannanamvoice/Edition-2-Mann-Voice-2025-Dec-1/#p=1"
       },
       {
         id: "2025-08",
@@ -654,3 +654,4 @@
 
 </body>
 </html>
+
