--- a/magazine.html
+++ b/magazine.html
@@ -556,7 +556,7 @@
         cover: "editions/2025-08/cover1.jpg",
         type: "pdf",
         pdf: "editions/2025-08/magazine1.pdf",
-        flipbookUrl: "https://www.janasabha.org.in/flipbook-2025-08.html"
+        flipbookUrl: "https://online.fliphtml5.com/mannanamvoice/jgxi/#p=1"
       },
        
       // Add more editions here...
@@ -654,4 +654,5 @@
 
 </body>
 </html>
+
 
