--- a/magazine.html
+++ b/magazine.html
@@ -487,7 +487,7 @@
   <div class="page-wrap">
   <div class="back-area">
     <button class="back-btn" onclick="history.back()">
-      <a class="back-btn" href="index.html">
+      <a class="back-btn" href="https://www.janasabha.org.in/page-mannjan.html">
   <i class="fa fa-arrow-left"></i> Back
 </a>
     </button>
@@ -654,5 +654,6 @@
 
 </body>
 </html>
+
 
 
