--- a/news.html
+++ b/news.html
@@ -657,6 +657,10 @@
   </footer>
 
   <!-- ===== UI SCRIPTS (NAV + LANG) ===== -->
+
+
+
+  
   <script>
     // Side menu
     document.addEventListener("DOMContentLoaded", function () {
@@ -1087,6 +1091,11 @@
       });
     });
   </script>
+  <style>
+  .lang-menu.show {
+    display: block;
+  }
+</style>
   
 </body>
 </html>
