--- a/manual.html
+++ b/manual.html
@@ -474,7 +474,7 @@
 
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
-    <img src="JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
+    <img src="manual/JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
     <img src="JanasabhaManual2.jpg" class="thumbnail" data-page="2">
     <img src="JanasabhaManual3.jpg" class="thumbnail" data-page="3">
     <img src="JanasabhaManual4.jpg" class="thumbnail" data-page="4">
@@ -685,6 +685,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
