--- a/manual.html
+++ b/manual.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Janasabha</title>
+  <title>Janasabha Manual</title>
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     
@@ -474,7 +474,7 @@
 
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
-    <img src="manual/JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
+    <img src="manual/JanasabhaManual1.JPG" class="thumbnail active" data-page="1">
     <img src="JanasabhaManual2.jpg" class="thumbnail" data-page="2">
     <img src="JanasabhaManual3.jpg" class="thumbnail" data-page="3">
     <img src="JanasabhaManual4.jpg" class="thumbnail" data-page="4">
@@ -685,6 +685,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
