--- a/manual.html
+++ b/manual.html
@@ -469,13 +469,13 @@
   
   <!-- Main Page Display -->
   <div class="main-page-wrapper">
-    <img id="mainPage" src="JanasabhaManual1.jpg" class="main-page" alt="Manual Page">
+    <img id="mainPage" src="manual/JanasabhaManual1.jpg" class="main-page" alt="Manual Page">
   </div>
 
   <!-- Thumbnails -->
   <div class="thumbnail-strip">
     <img src="manual/JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
-    <img src="JanasabhaManual2.jpg" class="thumbnail" data-page="2">
+    <img src="manual/JanasabhaManual2.jpg" class="thumbnail" data-page="2">
     <img src="JanasabhaManual3.jpg" class="thumbnail" data-page="3">
     <img src="JanasabhaManual4.jpg" class="thumbnail" data-page="4">
     <img src="JanasabhaManual5.jpg" class="thumbnail" data-page="5">
@@ -685,6 +685,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
