--- a/manual.html
+++ b/manual.html
@@ -473,18 +473,19 @@
   </div>
 
   <!-- Thumbnails -->
-  <div class="thumbnail-strip">
-    <img src="JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
-    <img src="JanasabhaManual2.jpg" class="thumbnail" data-page="2">
-    <img src="JanasabhaManual3.jpg" class="thumbnail" data-page="3">
-    <img src="JanasabhaManual4.jpg" class="thumbnail" data-page="4">
-    <img src="JanasabhaManual5.jpg" class="thumbnail" data-page="5">
-    <img src="JanasabhaManual6.jpg" class="thumbnail" data-page="6">
-    <img src="JanasabhaManual7.jpg" class="thumbnail" data-page="7">
-    <img src="JanasabhaManual8.jpg" class="thumbnail" data-page="8">
-    <img src="JanasabhaManual9.jpg" class="thumbnail" data-page="9">
-    <img src="JanasabhaManual10.jpg" class="thumbnail" data-page="10">
-  </div>
+<div class="thumbnail-strip">
+  <img src="manual/JanasabhaManual1.jpg" class="thumbnail active" data-page="1">
+  <img src="manual/JanasabhaManual2.jpg" class="thumbnail" data-page="2">
+  <img src="manual/JanasabhaManual3.jpg" class="thumbnail" data-page="3">
+  <img src="manual/JanasabhaManual4.jpg" class="thumbnail" data-page="4">
+  <img src="manual/JanasabhaManual5.jpg" class="thumbnail" data-page="5">
+  <img src="manual/JanasabhaManual6.jpg" class="thumbnail" data-page="6">
+  <img src="manual/JanasabhaManual7.jpg" class="thumbnail" data-page="7">
+  <img src="manual/JanasabhaManual8.jpg" class="thumbnail" data-page="8">
+  <img src="manual/JanasabhaManual9.jpg" class="thumbnail" data-page="9">
+  <img src="manual/JanasabhaManual10.jpg" class="thumbnail" data-page="10">
+</div>
+
 
 </div>
 
@@ -685,6 +686,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
