--- a/manual.html
+++ b/manual.html
@@ -467,23 +467,8 @@
 <div class="page-viewer-container">
 
   
-  <!-- Main Page Display -->
-  <<div class="page-viewer-container">
-
-  <!-- Main Page Display -->
-  <div class="main-page-wrapper">
-    <img id="mainPage" src="manual/janasabhaManual.JPG" class="main-page" alt="Manual Page">
-  </div>
-
-  <!-- THUMBNAIL STRIP WITH BUTTONS -->
-  <div class="thumbnail-strip-wrapper">
-    <button id="thumbPrev" class="thumb-arrow">‹</button>
-
-    <div id="thumbnailStrip" class="thumbnail-strip"></div>
-
-    <button id="thumbNext" class="thumb-arrow">›</button>
-  </div>
-
+<!-- Main Page Display -->
+  <div class="main-page-wrapper"> <img id="mainPage" src="manual/JanasabhaManual1.jpg" class="main-page" alt="Manual Page"> </div>
 </div>
 
   <!-- Thumbnails -->
@@ -678,6 +663,7 @@ document.querySelectorAll('.mannjana-buttons .btn').forEach(button => {
 </body>
 
 </html>
+
 
 
 
